[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kis-utils"

version = "0.1.2"
description = "Korea Investment & Securities API Utils"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests",
    "python-dotenv",
    "pandas",
]

[project.scripts]
kis = "kis_utils:main"
kis-utils = "kis_utils:main"

[dependency-groups]
dev = [
    "pytest",
]

[tool.uv]
package = true

